ghc/tests/reader/should_fail/read012.hs
-- !!! test parse errors due to tokens inserted by layout

-- used to report "Parse error on input `'" in 4.04pl0.

main = let 
	f = (a,
	g = 1
	in f

