ghc/tests/reader/should_fail/read012.stderr
read012.hs:7: parse error (possibly incorrect indentation)
